--- a/serverless-spa/learnjs-trial/public/index.html
+++ b/serverless-spa/learnjs-trial/public/index.html
@@ -11,25 +11,32 @@
     <script src='/app.js'></script>
     <style type="text/css" media="all">
       body { margin-top: 30px; }
+      .templates { display: none; }
+    </style>
     </style>
   </head>
   <body>
-    <div class="markup">
+    <div class='markup'>
       <div class='view-container container'>
-        <div class="landing-view">
-          <div class="row">
-            <div class="one-half column">
-              <h3>Learn JavaScript, one puzzle at a time</h3>
-              <a href="#problem-1" class="button button-primary">Start Now!</a>
+        <div class='landing-view'>
+          <div class='row'>
+            <div class='one-half column'>
+              <h3>Learn JavaScript, one puzzle at a time.</h3>
+              <a href='#problem-1' class='button button-primary'>Start Now!</a>
             </div>
-            <div class="one-half column">
-              <img src="/images/HeroImage.jpg" />
+            <div class='one-half column'>
+              <img src='/images/HeroImage.jpg'/>
             </div>
           </div>
         </div>
       </div>
+      <div class='templates'>
+        <div class='problem-view'>
+          <h3 class='title'></h3>
+        </div>
+      </div>
     </div>
-    <script type="text/javascript">
+    <script type='text/javascript'>
       $(window).ready(learnjs.appOnReady);
     </script>
   </body>
