--- a/mindspace-react/reactjs-basics-trials/src/index.html
+++ b/mindspace-react/reactjs-basics-trials/src/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <title>ReactJS Basic</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+<div id="app"></div>
 <script src="/app/bundle.js">
 
 </script>
