--- a/react-quickly/ch03/test/index.html
+++ b/react-quickly/ch03/test/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="js/react.js"></script>
+    <script src="js/react-dom.js"></script>
   </head>
   <body>
     <div id="content"></div>
